--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ nav ul li a:hover::after{
 }
 
 .services-list div:hover{
-    background: #00ff59;
+    background: #34fe7b;
     transform: translateY(-10px);
 
 }
@@ -395,7 +395,7 @@ nav .fa-solid{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(images/digital-art-dark-red-black-backgrounds-wallpaper-1080x1920_165.jpg);
+        background-image: url(images/phone-background.png);
     }
     .header-text{
         margin-top: 100%;
